# server_add

./: CMakeLists.txt
lib/dsf/include/app/: app.h
lib/dsf/include/bus/: CRelayBus.h  bus.h  bus_def.h  bus_err.h
lib/dsf/include/comm/: base64.h  convert.h  file_util.h  mempool.h  mempool_shm.h  shtable.h  shtable_shm.h  singleton.h  stdinc.h  thread_helper.h  util.h
lib/dsf/include/conn/: CConnApi.h  zone_conn_frame.c  zone_conn_frame.h
lib/dsf/include/dr/: dr_err.h  dr_meta.h  dr_net.h  dr_sql.h
lib/dsf/include/log/: log.h  log_def.h  log_dr.h  log_err.h
lib/dsf/include/ormapi/: COrmApi.h  orm_err.h  orm_protocol.h  orm_svr_err.h
lib/dsf/include/pal/: pal_os.h
lib/hiredis/: Makefile
protocol/: Makefile  replace_proto_change_file.sh
protocol/xml/: database.xml  proto_cs.xml  proto_cs_player.xml  proto_macro.xml  proto_player_comm.xml  proto_result_comm.xml  proto_sec.xml  proto_ss.xml  proto_ss_comm.xml  proto_tunnel.xml  tframehead.xml
resource/: Makefile
resource/config/: db_proxy_desc.xml  redis_proxy_conf_desc.xml  tunnel_svr_conf_desc.xml  tunnel_translate_conf_desc.xml  zone_conn_conf_desc.xml  zone_svr_conf_desc.xml
resource/xml/: BootyConfig.xml  CostBootyConfig.xml  ItemConfig.xml  ResMacro.xml  SensitiveWordConfig.xml  tunnel_proxy_desc.xml
runenv/cfg_gen/: gencfg-wai.sh  gencfg.sh  gencfg.sh.xue
runenv/cfg_gen/template/: clean_shm_key.sh  kgame_cmd.sh  start_all.sh  stop_all.sh
runenv/cfg_gen/template/db_proxy/cfg/: clear.sh  db_proxy.xml  db_proxy_log.xml  db_proxy_nei.xml  start_db_proxy.sh  stop_db_proxy.sh
runenv/cfg_gen/template/init_robot_svr/cfg/: db_proxy.xml  robot_svr.xml  robot_svr_log.xml  start_init_robot_svr.sh  stop_init_robot.svr.sh
runenv/cfg_gen/template/json_logload_svr/: jsonlogload_svr.xml  jsonlogload_svr_log.xml  start_jsonlogload_svr.sh  stop_jsonlogload_svr.sh  up_conf.sh
runenv/cfg_gen/template/logd_svr/cfg/: start_logd.sh  stop_logd.sh  tlogd.xml  tlogd_log.xml
runenv/cfg_gen/template/logload_svr/cfg/: logload_svr.xml  logload_svr_log.xml  start_logload_svr.sh  stop_logload_svr.sh  up_conf.sh
runenv/cfg_gen/template/manor_svr/cfg/: clear.sh  manor_svr.xml  manor_svr_log.xml  start_manor_svr.sh  stop_manor_svr.sh  tunnel_proxy.xml  up_conf.sh
runenv/cfg_gen/template/match_svr/cfg/: clear.sh  match_svr.xml  match_svr_log.xml  start_match_svr.sh  stop_match_svr.sh  tunnel_proxy.xml
runenv/cfg_gen/template/msgq/: init.sh  msgq_config.xml
runenv/cfg_gen/template/perform_tool/cfg/: perform_tool.xml  perform_tool_log.xml  start_perform_tool.sh  stop_perform_tool.sh  tunnel_proxy.xml  up_conf.sh
runenv/cfg_gen/template/realtime_oper_log/cfg/: clear.sh  realtime_oper_log.xml  realtime_oper_log_svr.xml  region_conf.xml  start_realtime_oper_svr.sh  stop_realtime_oper_svr.sh
runenv/cfg_gen/template/redis_proxy/cfg/: redis_proxy.xml  redis_proxy_log.xml  region_conf.xml  start_redis_proxy.sh  stop_redis_proxy.sh  tunnel_proxy.xml  up_conf.sh
runenv/cfg_gen/template/relation_svr/cfg/: clear.sh  relation_svr.xml  relation_svr_log.xml  start_relation_svr.sh  stop_relation_svr.sh  tunnel_proxy.xml  up_conf.sh
runenv/cfg_gen/template/tunnel_svr/cfg/: start_tunnel_svr.sh  stop_tunnel_svr.sh  tunnel_svr.xml  tunnel_svr_log.xml  up_conf.sh
runenv/cfg_gen/template/world_svr/cfg/: clear.sh  start_world_svr.sh  stop_world_svr.sh  tunnel_proxy.xml  up_conf.sh  world_svr.xml  world_svr_log.xml
runenv/cfg_gen/template/zone_conn/cfg/: start_zone_conn.sh  stop_zone_conn.sh  zone_conn.xml  zone_conn_log.xml
runenv/cfg_gen/template/zone_svr/cfg/: clear.sh  region_conf.xml  start_zone_svr.sh  stop_zone_svr.sh  tunnel_proxy.xml  zone_svr.xml  zone_svr_log.xml
runenv/db_proxy/cfg/: clear.sh  db_proxy.xml  db_proxy_log.xml  db_proxy_nei.xml  start_db_proxy.sh  stop_db_proxy.sh
runenv/db_proxy/cfg/db_meta/: database.dr
runenv/msgq/: msgq_config.xml
runenv/zone_conn/cfg/: start_zone_conn.sh  stop_zone_conn.sh  zone_conn.xml  zone_conn_log.xml
runenv/zone_conn/cfg/proto/: proto_cs.dr
runenv/zone_svr/cfg/: clear.sh  region_conf.xml  start_zone_svr.sh  stop_zone_svr.sh  tunnel_proxy.xml  up_conf.sh  zone_svr.xml  zone_svr_log.xml
runenv/zone_svr/cfg/db_meta/: database.dr
runenv/zone_svr/cfg/fs_rank_data/: player_citylv_rank.bin.xml  player_division_rank.bin.xml  player_fight_rank.bin.xml  player_rolelv_rank.bin.xml
runenv/zone_svr/cfg/proto/: ResMeta.dr  ResMeta_cli.dr  log.dr  proto_cs.dr  proto_fs.dr  proto_ss.dr
src/: CMakeComm.txt  CMakeLists.txt
src/comm/: ArrayOper.h  CAppFrame.cpp  CAppFrame.h  CAuto.h  CBArray.h  CBaseFsRank.h  CBaseRank.h  CBinReader.cpp  CBinReader.h  CBinaryHeap.h  CDrLibCacheMgr.cpp  CDrLibCacheMgr.h  CFsDb.cpp  CFsDb.h  CFsTable.cpp  CFsTable.h  CItemSelector.h  CMsgQueue.cpp  CMsgQueue.h  CPerformStatsticMgr.cpp  CPerformStatsticMgr.h  CRandGenerator.cpp  CRandGenerator.h  CRandUtil.cpp  CRandUtil.h  CShareKvData.cpp  CShareKvData.h  CShmArray.h  CShmArrayList.h  CShmDataPool.cpp  CShmDataPool.h  CShmEliminateList.h  CShmFastPool.h  CShmHash.h  CShmHashObjPool.h  CShmList.h  CShmObjPool.h  CShmSortArray.h  CShmSortStatsArray.h  CShmStruct.h  (+53 more)
src/logic_comm/base/: CTormMgr.cpp  CTormMgr.h
src/zone_svr/: CMakeLists.txt
src/zone_svr/frame/: CEventMgr.cpp  CEventMgr.h  CZoneAppFrame.cpp  CZoneAppFrame.h  ZoneEventDefine.h  zone_comm.cpp  zone_comm.h  zone_svr.cpp
src/zone_svr/logic/: CZoneDbMgr.cpp  CZoneDbMgr.h  CZoneTormHandler.cpp  CZoneTormHandler.h
src/zone_svr/model/: CPlayer.cpp  CPlayer.h  CPlayerBag.cpp  CPlayerBag.h  CPlayerCmpt.cpp  CPlayerCmpt.h  CPlayerDirty.h  CPlayerPoolMgr.cpp  CPlayerPoolMgr.h
tools/base/: busmgr  drcheck  drgen  drgen.bak  sqlgen
